# Better-laba3

./: BinarySearchTree.h  CMakeLists.txt  Lab3.sln  Lab3.vcxproj  Lab3.vcxproj.filters  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Set.h  Test.h  TestWindow.cpp  TestWindow.h  TestWindow.ui
